--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Deprecated==1.2.12
 Flask==1.1.2
 Flask-SQLAlchemy==2.5.1
 greenlet==1.0.0
+gunicorn==20.1.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
