--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -11,8 +11,19 @@ RUN yarn install --ignore-engines
 RUN yarn build
 
 # production env
-# use alpine linux with standard python-7
+# use alpine linux with standard python-3.7
 FROM python:3.9-alpine
+
+# install postgres dependencies
+RUN apk update && apk upgrade && \
+    apk add --no-cache git
+
+# install gcc and g++
+RUN set -ex && \
+    apk add --no-cache gcc musl-dev g++
+
+
+RUN apk add postgresql-dev
 
 # open up port 80
 EXPOSE 80
@@ -26,9 +37,13 @@ COPY githubify /app/githubify/
 COPY requirements.txt /app/requirements.txt
 COPY clock.py /app/clock.py
 COPY app.py /app/app.py
+COPY .env /app/.env
+
+# copy build over
+COPY --from=build /app/build /app/client/build
 
 # install python dependencies
 RUN pip install -r requirements.txt
 
 # spin up server
-CMD ["gunicorn", "--bind", "0.0.0.0:80", "app:app"]]
+CMD ["gunicorn", "--bind", "0.0.0.0:80", "app:app"]
