--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -46,4 +46,4 @@ COPY --from=build /app/build /app/client/build
 RUN pip install -r requirements.txt
 
 # spin up server
-CMD ["gunicorn", "--bind", "0.0.0.0:80", "app:app"]
+CMD ["gunicorn", "app:app"]
